test/subjects/errors/bad_arrays_read4.php
<?php
	$x[][0]; // { Error: Cannot use [] for reading }
?>

